--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uEX-Aq-bow">
-                                <rect key="frame" x="10" y="40" width="355" height="444.5"/>
+                                <rect key="frame" x="10" y="40" width="355" height="414.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25I-Mh-xSF">
                                         <rect key="frame" x="134.5" y="0.0" width="86.5" height="20.5"/>
@@ -28,21 +28,17 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="njW-gY-xIe">
-                                        <rect key="frame" x="0.0" y="20.5" width="355" height="30"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="310" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="njW-gY-xIe">
+                                        <rect key="frame" x="22.5" y="20.5" width="310" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="njW-gY-xIe" secondAttribute="height" multiplier="31:3" id="SNF-m8-d0r"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YmJ-Tp-kyY">
-                                        <rect key="frame" x="102" y="50.5" width="151" height="30"/>
-                                        <state key="normal" title="Set Default Label Text"/>
-                                        <connections>
-                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B5o-qB-cyB"/>
-                                        </connections>
-                                    </button>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="QzO-NU-3MW">
-                                        <rect key="frame" x="17.5" y="80.5" width="320" height="320"/>
+                                        <rect key="frame" x="17.5" y="50.5" width="320" height="320"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="QzO-NU-3MW" secondAttribute="height" multiplier="1:1" id="dB3-TH-XSP"/>
@@ -52,7 +48,7 @@
                                         </connections>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aPy-gf-wQ9" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="51.5" y="400.5" width="252" height="44"/>
+                                        <rect key="frame" x="51.5" y="370.5" width="252" height="44"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                 <integer key="value" value="5"/>
@@ -60,9 +56,6 @@
                                         </userDefinedRuntimeAttributes>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="njW-gY-xIe" secondAttribute="trailing" id="2BW-jj-XtX"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -77,6 +70,7 @@
                         <outlet property="mealNameLabel" destination="25I-Mh-xSF" id="GoA-7u-Ml1"/>
                         <outlet property="nameTextField" destination="njW-gY-xIe" id="pnX-g2-UxV"/>
                         <outlet property="photoImageView" destination="QzO-NU-3MW" id="1Cb-9w-ypF"/>
+                        <outlet property="ratingControl" destination="aPy-gf-wQ9" id="lCL-mM-cD2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
